--- a/teaching.html
+++ b/teaching.html
@@ -31,6 +31,11 @@ li {
 	<li>Mathematics and statistics for artificial intelligence</li>
 </ul>
 
+<h2>Materials</h2>
+<ul>
+	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space<a></li>
+</ul>
+
 </div>
 
 <hr>
