--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@ li {
 
 <h2>Materials</h2>
 <ul>
-	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space<a></li>
+	<li><a href="https://github.com/ash-suzuki/ash-suzuki.github.io/blob/main/material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space<a></li>
 </ul>
 
 </div>
