--- a/publications.html
+++ b/publications.html
@@ -27,13 +27,19 @@ li {
 
 <h2>Refereed Publications</h2>
 <ul>
+	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Taiji Suzuki, Jing Wang, Feng Tian, and Kenji Yamanishi. <br>
+		<strong>Tight and fast generalization error bound of graph embedding in metric space. </strong><br> 
+		In <i>Proceedings of the 40th International Conference on Machine Learning (ICML)</i>, 2023, Accepted.</li>
+
+	<li>Zipei Yan, Linchuan Xu, <strong>Atsushi Suzuki</strong>, Jing Wang, Jiannong Cao, and Jun Huang. <strong>RGB Color Model Aware Computational Color Naming and Its Application to Data Augmentation. </strong><br> In <i> Proceedings of 2022 IEEE International Conference on Big Data (Big Data)</i>, pages 1172-1181, 2022.
+
 	<li><strong>Atsushi Suzuki</strong> and Kenji Yamanishi. <br> 
 		<strong>Fourier-analysis-based form of normalized maximum likelihood: Exact formula and relation to complex Bayesian prior. </strong><br>
 		<i>IEEE Transactions on Information Theory</i>, 67(9):6164–6178, 2021.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Jing Wang, Linchuan Xu, Kenji Yamanishi, and Marc Cavazza. <br>
 		<strong>Generalization error bounds for graph embedding using negative sampling: Linear vs hyperbolic. </strong><br>
-		In <i>Proceedings of the 35th Annual Conference on Neural Information Processing Systems (NeurIPS)</i>, 2021. Accepted.</li>
+		In <i>Proceedings of the 35th Annual Conference on Neural Information Processing Systems (NeurIPS)</i>, pages 1243–1255, 2021.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Jing Wang, Linchuan Xu, Kenji Yamanishi, and Marc Cavazza. <br>
 		<strong>Generalization error bound for hyperbolic ordinal embedding. </strong><br> 
