--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ li {
 
 <p>Welcome - ようこそ - 歓迎 - I'm <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
 
-<h2>News: <a href="opportunities.html">Call for PhD applications to be announced soon (2022.11.03).</a></h2>
+<h2>News: <a href="publications.html">Our paper has been accepted to ICML 2023 (2023.04.25).</a></h2>
 <ul>
-	<li><a href="opportunities.html">Call for PhD applications to be announced soon (2022.11.03).</a></li>
-	<li><a href="publications.html">Our paper has been accepted to IEEE BigData (2022.10.24).</a></li>
+	<li><a href="publications.html">Our paper has been accepted to ICML 2023 (2023.04.25).</a></li>
 </ul>
 
 <h2>Research Interests: Machine Learning</h2>
