--- a/teaching.html
+++ b/teaching.html
@@ -35,6 +35,9 @@ li {
 <ul>
 	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space<a></li>
 </ul>
+<ul>
+	<li><a href="material/probability_lecture.pdf"> Probability Theory<a></li>
+</ul>
 
 </div>
 
