--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@ li {
 
 <p>Welcome - ようこそ - 歓迎 - I'm <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
 
-<h2>News: <a href="publications.html">Our paper has been accepted to ICML 2023 (2023.04.25).</a></h2>
+<h2>News: <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">SUZUKI, Atsushi gave an invited talk in IJCAI 2023. (2023.08.20)</a></h2>
 <ul>
+	<li><a href="https://sites.google.com/view/kdh-2023/program?authuser=0">SUZUKI, Atsushi gave an invited talk in the 6th international workshop on Knowledge Discovery from Healthcare Data at the 23nd International Joint Conference on Artificial Intelligence (IJCAI 2023, Macao, 2023.08.20).</a></li>
+	<li><a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">SUZUKI, Atsushi gave an invited talk in the 2nd DSS (Data Science School) Symposium at the University of Tokyo (in Japanese, 2023.07.07).</a></li>
 	<li><a href="publications.html">Our paper has been accepted to ICML 2023 (2023.04.25).</a></li>
 </ul>
 
-<h2>Research Interests: Machine Learning</h2>
+<h2>Research Interests: Applied Mathematics including Machine Learning</h2>
 <ul>
 	<li><strong>Small machine learning</strong> <br>by Riemannian-manifold-based (including hyperbolic-space-based) machine learning and optimization.</li>
 	<li><strong>Evaluating machine learning's limitation</strong> <br>by learning theory and information theory.</li>
