--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 <!--
 li {
-	margin: 4px 0;
+	margin: 6px 0;
 }
 -->
 </style>
@@ -28,11 +28,11 @@ li {
 
 <p>Welcome - ようこそ - 歓迎 - I'm <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
 
-<h2>News: <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">SUZUKI, Atsushi gave an invited talk in IJCAI 2023. (2023.08.20)</a></h2>
+<h2>News: SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">IJCAI 2023</a> (2023.08.20).</h2>
 <ul>
-	<li><a href="https://sites.google.com/view/kdh-2023/program?authuser=0">SUZUKI, Atsushi gave an invited talk in the 6th international workshop on Knowledge Discovery from Healthcare Data at the 23nd International Joint Conference on Artificial Intelligence (IJCAI 2023, Macao, 2023.08.20).</a></li>
-	<li><a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">SUZUKI, Atsushi gave an invited talk in the 2nd DSS (Data Science School) Symposium at the University of Tokyo (in Japanese, 2023.07.07).</a></li>
-	<li><a href="publications.html">Our paper has been accepted to ICML 2023 (2023.04.25).</a></li>
+	<li>SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">the 6th international workshop on Knowledge Discovery from Healthcare Data at the 23nd International Joint Conference on Artificial Intelligence (IJCAI 2023)</a> (Macao, 2023.08.20).</li>
+	<li>SUZUKI, Atsushi gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium at the University of Tokyo</a> (in Japanese, 2023.07.07).</li>
+	<li><a href="publications.html">Our paper has been accepted to ICML 2023</a> (2023.04.25).</li>
 </ul>
 
 <h2>Research Interests: Applied Mathematics including Machine Learning</h2>
@@ -46,6 +46,7 @@ li {
 <h2>Career & Education</h2>
 <ul>
 	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
+	<li>2023.05-present: <strong>Visiting Researcher</strong>, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
 	<li>2020.04-2022.08: <strong>Assistant Professor (UK Lecturer)</strong>, School of Computing and Mathematical Sciences, <br><strong>University of Greenwich</strong>, United Kingdom.</li>
 </ul>
 <ul>
@@ -58,7 +59,6 @@ li {
 <ul>
 	<li>English, Japanese, Chinese</li>
 	<li>C++11, Python 3, Ruby on Rails, Tensorflow 2, MATLAB, Perl</li>
-	<li>For Japanese language users: 日本語での学術指導が可能です（但し提出等の正式手続きは所属組織の規程による）。</li>
 </ul>
 </div>
 
