--- a/opportunities.html
+++ b/opportunities.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 <!--
 li {
-	margin: 4px 0;
+	margin: 6px 0;
 }
 -->
 </style>
@@ -25,9 +25,25 @@ li {
 
 <div class="main">
 
-<p>For Japanese language users: 日本語での学術指導が可能です（但し提出等の正式手続きは所属組織の規程による）。</p>
+    <h2>PhD opportunity</h2>
+    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. Check out <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#" style="color: #5F9EA0">this webpage for general info about PhD study</a>. Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.
 
-<h2>To be announced soon.</h2>
+    <h3>Funding Options</h3>
+    Find support for postgrad research at <a href="https://www.kcl.ac.uk/study-legacy/doctoral-studies/funding">King's Funding & Scholarships</a>. Options include:
+    <ul>
+      <li><a href="https://www.kcl.ac.uk/research/funding-opportunities/doctoral-research-opportunities/international-scholarships">King's International PhD Scholarships</a></li>
+      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/phd-studentships-in-faculty-of-natural-mathematics-engineering-sciences">Fully-funded PhD studentships in the Department of Informatics</a></li>
+      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/kings-china-scholarship-council-phd-scholarship-programme-k-csc">King's-China Scholarships</a> (for Chinese nationals)</li>
+      <li><a href="https://www.kcl.ac.uk/research/funding-opportunities/doctoral-research-opportunities/current-phd-opportunities/astar-phd-studentships">King's A*STAR PhD Studentships</a></li>
+      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/joint-phd-scholarship">Joint PhD Scholarships</a></li>
+      <li>Self-funding options available</li>
+    </ul>
+
+    <h2>Academic Visitors</h2>
+    <p>Researchers from universities, institutes, and industry are welcome to visit. Please email for details.</p>
+
+    <h2>Visiting Research Students</h2>
+    <p>Open to visiting research students from UK or international institutions. Please check <a href="https://www.kcl.ac.uk/study/postgraduate-research/visiting-research-students">College policy</a> and email for info.</p>
 
 </div>
 
