--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
 <style type="text/css">
 <!--
 li {
-	margin: 4px 0;
+	margin: 6px 0;
 }
 -->
 </style>
@@ -28,37 +28,42 @@ li {
 <h2>Refereed Publications</h2>
 <ul>
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Taiji Suzuki, Jing Wang, Feng Tian, and Kenji Yamanishi. <br>
-		<strong>Tight and fast generalization error bound of graph embedding in metric space. </strong><br> 
-		In <i>Proceedings of the 40th International Conference on Machine Learning (ICML)</i>, 2023, Accepted.</li>
+		"Tight and fast generalization error bound of graph embedding in metric space." <br> 
+		In <i>Proceedings of the 40th International Conference on Machine Learning (<strong>ICML</strong>)</i>, 2023, Accepted.</li>
 
-	<li>Zipei Yan, Linchuan Xu, <strong>Atsushi Suzuki</strong>, Jing Wang, Jiannong Cao, and Jun Huang. <strong>RGB Color Model Aware Computational Color Naming and Its Application to Data Augmentation. </strong><br> In <i> Proceedings of 2022 IEEE International Conference on Big Data (Big Data)</i>, pages 1172-1181, 2022.
+	<li>Zipei Yan, Linchuan Xu, <strong>Atsushi Suzuki</strong>, Jing Wang, Jiannong Cao, and Jun Huang. <br>
+		"RGB Color Model Aware Computational Color Naming and Its Application to Data Augmentation." <br> In <i> Proceedings of 2022 IEEE International Conference on Big Data (<strong>BigData</strong>)</i>, pages 1172-1181, 2022.
 
 	<li><strong>Atsushi Suzuki</strong> and Kenji Yamanishi. <br> 
-		<strong>Fourier-analysis-based form of normalized maximum likelihood: Exact formula and relation to complex Bayesian prior. </strong><br>
-		<i>IEEE Transactions on Information Theory</i>, 67(9):6164–6178, 2021.</li>
+		"Fourier-analysis-based form of normalized maximum likelihood: Exact formula and relation to complex Bayesian prior." <br>
+		<i>IEEE Transactions on Information Theory (<strong>IEEE Trans. Inf. Theory</strong>)</i>, 67(9):6164–6178, 2021.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Jing Wang, Linchuan Xu, Kenji Yamanishi, and Marc Cavazza. <br>
-		<strong>Generalization error bounds for graph embedding using negative sampling: Linear vs hyperbolic. </strong><br>
-		In <i>Proceedings of the 35th Annual Conference on Neural Information Processing Systems (NeurIPS)</i>, pages 1243–1255, 2021.</li>
+		"Generalization error bounds for graph embedding using negative sampling: Linear vs hyperbolic." <br>
+		In <i>Proceedings of the 35th Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</i>, pages 1243–1255, 2021.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Jing Wang, Linchuan Xu, Kenji Yamanishi, and Marc Cavazza. <br>
-		<strong>Generalization error bound for hyperbolic ordinal embedding. </strong><br> 
-		In <i>Proceedings of the 38th International Conference on Machine Learning (ICML)</i>, pages 10011–10021. PMLR, 2021.</li>
+		"Generalization error bound for hyperbolic ordinal embedding." <br> 
+		In <i>Proceedings of the 38th International Conference on Machine Learning (<strong>ICML</strong>)</i>, pages 10011–10021. PMLR, 2021.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Jing Wang, Feng Tian, Atsushi Nitanda, and Kenji Yamanishi. <br>
-		<strong>Hyperbolic ordinal embedding. </strong><br>
-		In <i>Proceedings of the 11th Asian Conference on Machine Learning (ACML)</i>, 2019.</li>
+		"Hyperbolic ordinal embedding." <br>
+		In <i>Proceedings of the 11th Asian Conference on Machine Learning (<strong>ACML</strong>)</i>, 2019.</li>
 
-	<li><strong>Atsushi Suzuki</strong> and Kenji Yamanishi. <br><strong>Exact calculation of normalized maximum likelihood code length using Fourier analysis. </strong><br>
-	In <i>Proceedings of the 2018 IEEE International Symposium on Information Theory (ISIT)</i>, pages 1211–1215. IEEE, 2018.</li>
-	<li><strong>Atsushi Suzuki</strong>, Kohei Miyaguchi, and Kenji Yamanishi.<br>
-		<strong>Structure selection for convolutive non-negative matrix factorization using normalized maximum likelihood coding.</strong><br>In <i>Proceedings of the 16th IEEE International Conference on Data Mining (ICDM)</i>, Barcelona, Dec. 2016.</li>
 	<li>Jing Wang, <strong>Atsushi Suzuki</strong>, Linchuan Xu, Feng Tian, Liang Yang, and Kenji Yamanishi. 
-		<strong>Orderly subspace clustering.</strong><br> 
-		In <i>Proceedings of the 33rd AAAI Conference on Artificial Intelligence (AAAI)</i>, 2019.</li>
+		"Orderly subspace clustering." <br> 
+		In <i>Proceedings of the 33rd AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</i>, 2019.</li>
+
 	<li>Jing Wang, Linchuan Xu, Feng Tian, <strong>Atsushi Suzuki</strong>, Changqing Zhang, and Kenji Yamanishi. <br>
-		<strong>Attributed subspace clustering. </strong><br> 
-		In <i>Proceedings of the 28th International Joint Conference on Artificial Intelligence (IJCAI)</i>, 2019.</li>
+		"Attributed subspace clustering." <br> 
+		In <i>Proceedings of the 28th International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>)</i>, 2019.</li>
+
+	<li><strong>Atsushi Suzuki</strong> and Kenji Yamanishi. <br>
+		"Exact calculation of normalized maximum likelihood code length using Fourier analysis." <br>
+	In <i>Proceedings of the 2018 IEEE International Symposium on Information Theory (<strong>ISIT</strong>)</i>, pages 1211–1215. IEEE, 2018.</li>
+
+	<li><strong>Atsushi Suzuki</strong>, Kohei Miyaguchi, and Kenji Yamanishi.<br>
+		"Structure selection for convolutive non-negative matrix factorization using normalized maximum likelihood coding." <br>In <i>Proceedings of the 16th IEEE International Conference on Data Mining (<strong>ICDM</strong>)</i>, Barcelona, Dec. 2016.</li>
 </ul>
 
 </div>
