--- a/opportunities.html
+++ b/opportunities.html
@@ -26,7 +26,7 @@ li {
 <div class="main">
 
     <h2>PhD opportunity</h2>
-    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. Check out <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#" style="color: #5F9EA0">this webpage for general info about PhD study</a>. Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.
+    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. Check out <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#">this webpage for general info about PhD study</a>. Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.
 
     <h3>Funding Options</h3>
     Find support for postgrad research at <a href="https://www.kcl.ac.uk/study-legacy/doctoral-studies/funding">King's Funding & Scholarships</a>. Options include:
