--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@ li {
 
 <div class="menu">
 	<p>
-		<a href="index.html"><strong>News & About me</strong></a> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <strong>Publications</strong> | <a href="teaching.html"><strong>Teaching</strong></a>
+		<a href="index.html"><strong>News & About me</strong></a> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <strong>Publications</strong> | <a href="talks.html"><strong>Talks & Teaching</strong></a>
 	</p>
 </div>
 
@@ -50,7 +50,7 @@ li {
 		"Hyperbolic ordinal embedding." <br>
 		In <i>Proceedings of the 11th Asian Conference on Machine Learning (<strong>ACML</strong>)</i>, 2019.</li>
 
-	<li>Jing Wang, <strong>Atsushi Suzuki</strong>, Linchuan Xu, Feng Tian, Liang Yang, and Kenji Yamanishi. 
+	<li>Jing Wang, <strong>Atsushi Suzuki</strong>, Linchuan Xu, Feng Tian, Liang Yang, and Kenji Yamanishi. <br>
 		"Orderly subspace clustering." <br> 
 		In <i>Proceedings of the 33rd AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>)</i>, 2019.</li>
 
