--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ li {
 
 <div class="menu">
 	<p>
-		<strong>News & About me</strong> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <a href="publications.html"><strong>Publications</strong></a> | <a href="teaching.html"><strong>Teaching</strong></a>
+		<strong>News & About me</strong> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <a href="publications.html"><strong>Publications</strong></a> | <a href="talks.html"><strong>Talks & Teaching</strong></a>
 	</p>
 </div>
 
@@ -30,9 +30,10 @@ li {
 
 <h2>News: SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">IJCAI 2023</a> (2023.08.20).</h2>
 <ul>
-	<li>SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">the 6th international workshop on Knowledge Discovery from Healthcare Data at the 23nd International Joint Conference on Artificial Intelligence (IJCAI 2023)</a> (Macao, 2023.08.20).</li>
-	<li>SUZUKI, Atsushi gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium at the University of Tokyo</a> (in Japanese, 2023.07.07).</li>
-	<li><a href="publications.html">Our paper has been accepted to ICML 2023</a> (2023.04.25).</li>
+	<li>SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
+	<li>SUZUKI, Atsushi gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
+	<li>SUZUKI, Atsushi gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium</a> at the University of Tokyo (<strong>UTokyo</strong>, 2023.07.07).</li>
+	<li><a href="publications.html">Our paper has been accepted to <strong>ICML 2023</strong></a> (2023.04.25).</li>
 </ul>
 
 <h2>Research Interests: Applied Mathematics including Machine Learning</h2>
@@ -46,7 +47,7 @@ li {
 <h2>Career & Education</h2>
 <ul>
 	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
-	<li>2023.05-present: <strong>Visiting Researcher</strong>, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
+	<li><strong>2023.05-present: Visiting Researcher</strong>, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
 	<li>2020.04-2022.08: <strong>Assistant Professor (UK Lecturer)</strong>, School of Computing and Mathematical Sciences, <br><strong>University of Greenwich</strong>, United Kingdom.</li>
 </ul>
 <ul>
