--- a/talks.html
+++ b/talks.html
@@ -25,7 +25,7 @@ li {
 
 <div class="main">
 
-<h2>Talk</h2>
+<h2>Talks</h2>
 <ul>
 	<li><a href="https://sites.google.com/view/kdh-2023/program?authuser=0">The 6th international workshop on Knowledge Discovery from Healthcare Data</a> at the 23nd International Joint Conference on Artificial Intelligence (<strong>IJCAI 2023</strong>), Macao, 2023.08.20.</li>
 	<li>University of Science and Technology Beijing (<strong>USTB</strong>), 2023.07.26.</li>
