--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ li {
 
 <h2>News: SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">IJCAI 2023</a> (2023.08.20).</h2>
 <ul>
-	<li>SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
-	<li>SUZUKI, Atsushi gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
-	<li>SUZUKI, Atsushi gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium</a> at the University of Tokyo (<strong>UTokyo</strong>, 2023.07.07).</li>
+	<li>Gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
+	<li>Gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
+	<li>Gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium</a> at the University of Tokyo (<strong>UTokyo</strong>, 2023.07.07).</li>
 	<li><a href="publications.html">Our paper has been accepted to <strong>ICML 2023</strong></a> (2023.04.25).</li>
 </ul>
 
