--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ li {
 <h2>Career & Education</h2>
 <ul>
 	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
-	<li><strong>2023.05-present: Visiting Researcher</strong>, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
+	<li><strong>2023.05-present: Visiting Researcher</strong>, Department of Mathematical Informatics, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
 	<li>2020.04-2022.08: <strong>Assistant Professor (UK Lecturer)</strong>, School of Computing and Mathematical Sciences, <br><strong>University of Greenwich</strong>, United Kingdom.</li>
 </ul>
 <ul>
-	<li>2020.03: <strong>Doctor</strong> of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
-	<li>2017.03: <strong>Master</strong> of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
-	<li>2015.03: <strong>Bachelor</strong> of Engineering, <br><strong>The University of Tokyo</strong>, Japan. Supervisor: Professor Shinji Hara</li>
+	<li>2020.03: <strong>Doctor</strong> of Information Science and Technology (Department of Mathematical Informatics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
+	<li>2017.03: <strong>Master</strong> of Information Science and Technology (Department of Mathematical Informatics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
+	<li>2015.03: <strong>Bachelor</strong> of Engineering (Department of Mathematical Engineering and Information Physics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: Professor Shinji Hara</li>
 </ul>
 
 <h2>Languages</h2>
