--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@ li {
 
 <div class="main">
 
-<p>Welcome - ようこそ - 歓迎 - I'm <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
+<p>Welcome - ようこそ - 歓迎 - I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
+<ul>
+	<li>Email: atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
+</ul>
+<p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>differential-geometric machine learning</strong> and <strong>learning theory</strong>.</p>
+
+<hr>
 
 <h2>News: SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">IJCAI 2023</a> (2023.08.20).</h2>
 <ul>
@@ -36,7 +42,10 @@ li {
 	<li><a href="publications.html">Our paper has been accepted to <strong>ICML 2023</strong></a> (2023.04.25).</li>
 </ul>
 
-<h2>Research Interests: Applied Mathematics including Machine Learning</h2>
+<hr>
+
+<h2>About me</h2>
+<h3>Research Interests: Applied Mathematics for Machine Learning</h3>
 <ul>
 	<li><strong>Small machine learning</strong> <br>by Riemannian-manifold-based (including hyperbolic-space-based) machine learning and optimization.</li>
 	<li><strong>Evaluating machine learning's limitation</strong> <br>by learning theory and information theory.</li>
@@ -44,7 +53,7 @@ li {
 </ul>
 
 
-<h2>Career & Education</h2>
+<h3>Career & Education</h3>
 <ul>
 	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
 	<li><strong>2023.05-present: Visiting Researcher</strong>, Department of Mathematical Informatics, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
@@ -56,10 +65,25 @@ li {
 	<li>2015.03: <strong>Bachelor</strong> of Engineering (Department of Mathematical Engineering and Information Physics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: Professor Shinji Hara</li>
 </ul>
 
-<h2>Languages</h2>
+<h3>Fellowships and Grants</h3>
 <ul>
-	<li>English, Japanese, Chinese</li>
-	<li>C++11, Python 3, Ruby on Rails, Tensorflow 2, MATLAB, Perl</li>
+	<li><strong>JSPS DC2</strong> (2018.04-2020.03)</li>
+	<li><strong>Daiwa Foundation Awards</strong> (Co-PI) (2021.06-2022.03)</li>
+	<li><strong>Henan Provincial Foreign Experts Program</strong> (2022-)</li>
+	<li><strong>Wuhan University-Duke Kunshan University Sino-foreign Joint Research Platform Seed Funding Grant</strong> (2023-)</li>
+</ul>
+<h3>Academic Services</h3>
+<ul>
+	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024)</li>
+	<li>Session Chair: <strong>IJCAI</strong> (2023)</li>
+	<li>Topic Editor: <strong>Frontiers in Big Data</strong></li>
+</ul>
+
+<h3>Languages</h3>
+<ul>
+	<li>Fluent: <strong>English, Japanese (Native), Chinese (Mandarin)</strong></li>
+	<li>Others: Malay-Indonesian, Cantonese</li>
+	<li>Programming: C++11, Python 3, Ruby on Rails, Tensorflow 2, MATLAB, Perl</li>
 </ul>
 </div>
 
@@ -68,7 +92,7 @@ li {
 <div class="contact">
 	<p>
 		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a></a>
+		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
 	</p>
 </div>
 </body>
