--- a/opportunities.html
+++ b/opportunities.html
@@ -26,7 +26,9 @@ li {
 <div class="main">
 
     <h2>PhD opportunity</h2>
-    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. Check out <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#">Department's info about PhD study</a>. Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.
+    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. <br>
+    Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.</p>
+    <p>Check out: <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#">Department's info about PhD study</a>.</p>
 
     <h3>Funding Options</h3>
     Find support for postgrad research at <a href="https://www.kcl.ac.uk/study-legacy/doctoral-studies/funding">King's Funding & Scholarships</a>. Options include:
@@ -52,7 +54,7 @@ li {
 <div class="contact">
 	<p>
 		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a></a>
+		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
 	</p>
 </div>
 </body>
