--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <title>SUZUKI, Atsushi</title>
 <style type="text/css">
 <!--
+body { color: #202122; }
+a:link { color: #0645ad; }
+a:visited { color: #0b0080; }
+a:hover { text-decoration: underline; }
+a {text-decoration: none;}
 li {
 	margin: 6px 0;
 }
@@ -53,12 +58,13 @@ li {
 </ul>
 
 
-<h3>Career & Education</h3>
+<h3>Career</h3>
 <ul>
 	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
 	<li><strong>2023.05-present: Visiting Researcher</strong>, Department of Mathematical Informatics, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
 	<li>2020.04-2022.08: <strong>Assistant Professor (UK Lecturer)</strong>, School of Computing and Mathematical Sciences, <br><strong>University of Greenwich</strong>, United Kingdom.</li>
 </ul>
+<h3>Education</h3>
 <ul>
 	<li>2020.03: <strong>Doctor</strong> of Information Science and Technology (Department of Mathematical Informatics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
 	<li>2017.03: <strong>Master</strong> of Information Science and Technology (Department of Mathematical Informatics), <br><strong>The University of Tokyo</strong>, Japan. Supervisor: <a href="http://www.ibis.t.u-tokyo.ac.jp/yamanishi/index_e.html">Professor Kenji Yamanishi</a></li>
