--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,11 @@
 <title>Publications - SUZUKI, Atsushi</title>
 <style type="text/css">
 <!--
+body { color: #202122; }
+a {text-decoration: none;}
+a:link { color: #0645ad; }
+a:visited { color: #0b0080; }
+a:hover { text-decoration: underline; }
 li {
 	margin: 6px 0;
 }
