--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ li {
 
 <hr>
 
-<h2>News: SUZUKI, Atsushi gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">IJCAI 2023</a> (2023.08.20).</h2>
+<h2>News: <a href="publications.html">Our paper</a> has been accepted to <strong>ICDM 2023</strong> (2023.09.03).</h2>
 <ul>
 	<li>Gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
 	<li>Gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
