--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,10 @@ li {
 
 <h2>Refereed Publications</h2>
 <ul>
+	<li>Ryo Yuki, <strong>Atsushi Suzuki</strong>, and Kenji Yamanishi. <br>
+		"Dimensionality and Curvature Selection of Graph Embedding using DNML Code-Length." <br> 
+		In <i>Proceedings of the 23th IEEE International Conference on Data Mining (<strong>ICDM</strong>)</i>, 2023, Accepted.</li>
+
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Taiji Suzuki, Jing Wang, Feng Tian, and Kenji Yamanishi. <br>
 		"Tight and fast generalization error bound of graph embedding in metric space." <br> 
 		In <i>Proceedings of the 40th International Conference on Machine Learning (<strong>ICML</strong>)</i>, 2023, Accepted.</li>
