--- a/talks.html
+++ b/talks.html
@@ -39,22 +39,33 @@ li {
 </ul>
 
 <h2>Lectures</h2>
-<h3>2020-21</h3>
+<h3>2023-24 (King's College London)</h3>
 <ul>
-	<li>Machine Learning (postgraduate)</li>
-	<li>Artificial Intelligence Applications</li>
-	<li>Machine Learning (undergraduate)</li>
+	<li>Mathematics and statistics for artificial intelligence</li>
 </ul>
-<h3>2021-22</h3>
+<h3>2021-22 (University of Greenwich)</h3>
 <ul>
 	<li>Machine Learning (postgraduate)</li>
 	<li>Artificial Intelligence Applications</li>
 	<li>Machine Learning (undergraduate)</li>
 	<li>Algorithms and Data Structure</li>
 </ul>
-<h3>2023-24</h3>
+<h3>2020-21 (University of Greenwich)</h3>
 <ul>
-	<li>Mathematics and statistics for artificial intelligence</li>
+	<li>Machine Learning (postgraduate)</li>
+	<li>Artificial Intelligence Applications</li>
+</ul>
+
+<h2>Teaching Assistance</h2>
+<h3>2018-19 (The University of Tokyo)</h3>
+<ul>
+	<li>Advanced Core of Probability</li>
+	<li>Practical Data Science</li>
+</ul>
+
+<h3>2017-18 (The University of Tokyo)</h3>
+<ul>
+	<li>Practical Data Science</li>
 </ul>
 
 <h2>Materials</h2>
