--- a/index.html
+++ b/index.html
@@ -31,19 +31,22 @@ li {
 
 <div class="main">
 
-<p>Welcome - ようこそ - 歓迎 - I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">an Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>.</p>
-<ul>
-	<li>Email: atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
-</ul>
+<p>Welcome - ようこそ - 歓迎!</p> 
+<p>
+I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>, Visiting Researcher at <strong>the University of Tokyo</strong>.</p>
+
 <p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>differential-geometric machine learning</strong> and <strong>learning theory</strong>.</p>
+<p>	Email: atsushi.suzuki.rd AT gmail.com </p>
 
 <hr>
 
-<h2>News: <a href="publications.html">Our paper</a> has been accepted to <strong>ICDM 2023</strong> (2023.09.03).</h2>
+<h2>News:</h2>
 <ul>
+	<li><a href="publications.html">Our paper has been accepted to <strong>ICDM 2023</strong></a> (2023.09.03).</li>
 	<li>Gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
 	<li>Gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
 	<li>Gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium</a> at the University of Tokyo (<strong>UTokyo</strong>, 2023.07.07).</li>
+	<li>Working at the University of Tokyo as a Visiting Researcher (2023.05.01).
 	<li><a href="publications.html">Our paper has been accepted to <strong>ICML 2023</strong></a> (2023.04.25).</li>
 </ul>
 
@@ -73,16 +76,17 @@ li {
 
 <h3>Fellowships and Grants</h3>
 <ul>
-	<li><strong>JSPS DC2</strong> (2018.04-2020.03)</li>
-	<li><strong>Daiwa Foundation Awards</strong> (Co-PI) (2021.06-2022.03)</li>
-	<li><strong>Henan Provincial Foreign Experts Program</strong> (2022-)</li>
 	<li><strong>Wuhan University-Duke Kunshan University Sino-foreign Joint Research Platform Seed Funding Grant</strong> (2023-)</li>
+	<li><strong>Henan Provincial Foreign Experts Program</strong> (2022-)</li>
+	<li><strong>Daiwa Foundation Awards</strong> (Co-PI) (2021.06-2022.03)</li>
+	<li><strong>JSPS Research Fellowship for Young
+Scientists (DC2)</strong> (2018.04-2020.03)</li>
 </ul>
 <h3>Academic Services</h3>
 <ul>
-	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024)</li>
 	<li>Session Chair: <strong>IJCAI</strong> (2023)</li>
 	<li>Topic Editor: <strong>Frontiers in Big Data</strong></li>
+	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024), <strong>IPSJ-TOD</strong></li>
 </ul>
 
 <h3>Languages</h3>
