--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,7 @@ li {
 <div class="main">
 
 <h2>Refereed Publications</h2>
+<p>See also <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>.</p>
 <ul>
 	<li>Ryo Yuki, <strong>Atsushi Suzuki</strong>, and Kenji Yamanishi. <br>
 		"Dimensionality and Curvature Selection of Graph Embedding using DNML Code-Length." <br> 
