--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@ li {
 <ul>
 	<li>Ryo Yuki, <strong>Atsushi Suzuki</strong>, and Kenji Yamanishi. <br>
 		"Dimensionality and Curvature Selection of Graph Embedding using DNML Code-Length." <br> 
-		In <i>Proceedings of the 23th IEEE International Conference on Data Mining (<strong>ICDM</strong>)</i>, 2023, Accepted.</li>
+		In <i>Proceedings of the 23rd IEEE International Conference on Data Mining (<strong>ICDM</strong>)</i>, 2023, Accepted.</li>
 
 	<li><strong>Atsushi Suzuki</strong>, Atsushi Nitanda, Taiji Suzuki, Jing Wang, Feng Tian, and Kenji Yamanishi. <br>
 		"Tight and fast generalization error bound of graph embedding in metric space." <br> 
