--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-
 
 <h2>News:</h2>
 <ul>
+	<li>Received complimentary registration to <strong>NeurIPS 2023</strong> (awarded for top 8% reviewers) (2023.11.20).</li>
 	<li><a href="publications.html">Our paper has been accepted to <strong>ICDM 2023</strong></a> (2023.09.03).</li>
 	<li>Gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
 	<li>Gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
@@ -87,6 +88,10 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 	<li>Session Chair: <strong>IJCAI</strong> (2023)</li>
 	<li>Topic Editor: <strong>Frontiers in Big Data</strong></li>
 	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024), <strong>IPSJ-TOD</strong></li>
+</ul>
+<h3>Awards</h3>
+<ul>
+	<li><strong>NeurIPS 2023</strong> Complimentary Registration (awarded for <strong>top 8% reviewers</strong>)</li>
 </ul>
 
 <h3>Languages</h3>
