--- a/opportunities.html
+++ b/opportunities.html
@@ -1,66 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>PhD & Post-doc Opportunities - SUZUKI, Atsushi</title>
-<style type="text/css">
-<!--
-body { color: #202122; }
-a {text-decoration: none;}
-a:link { color: #0645ad; }
-a:visited { color: #0b0080; }
-a:hover { text-decoration: underline; }
-li {
-	margin: 6px 0;
-}
--->
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUZUKI, Atsushi - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body lang="en">
-<h1>PhD & Post-doc Opportunities - SUZUKI, Atsushi</h1>
+<body>
 
-<div class="menu">
-	<p>
-		<a href="index.html"><strong>News & About me</strong></a> | <strong>PhD & Post-doc Opportunities</strong> | <a href="publications.html"><strong>Publications</strong></a> | <a href="talks.html"><strong>Talks & Teaching</strong></a>
-	</p>
-</div>
+<header>
+    <div class="logo">
+      SUZUKI, Atsushi
+    </div>
+    <nav>
+        <a href="index.html">News & About me</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="opportunities.html">Research Opportunities</a>
+    </nav>
+</header>
 
-<hr>
+<main>
+<h1>Research opportunities</h1>
+<p><strong>Notice:</strong> Professor SUZUKI will be moving to the University of Hong Kong (HKU) and has suspended all recruitments at King's College London. Information about research opportunities at HKU will be available soon.</p>
+</main>
+<footer>
+    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+</footer>
 
-<div class="main">
-
-    <h2>PhD opportunity</h2>
-    <p>Seeking motivated PhD students to join me in general applied mathematics related to computer science. <br>
-    Please email your CV, transcripts, and 2-page research proposal if interested. Shortlisted candidates will be invited to interview.</p>
-    <p>Check out: <a href="https://www.kcl.ac.uk/informatics/postgraduate/research-degrees#">Department's info about PhD study</a>.</p>
-
-    <h3>Funding Options</h3>
-    Find support for postgrad research at <a href="https://www.kcl.ac.uk/study-legacy/doctoral-studies/funding">King's Funding & Scholarships</a>. Options include:
-    <ul>
-      <li><a href="https://www.kcl.ac.uk/research/funding-opportunities/doctoral-research-opportunities/international-scholarships">King's International PhD Scholarships</a></li>
-      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/phd-studentships-in-faculty-of-natural-mathematics-engineering-sciences">Fully-funded PhD studentships in the Department of Informatics</a></li>
-      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/kings-china-scholarship-council-phd-scholarship-programme-k-csc">King's-China Scholarships</a> (for Chinese nationals)</li>
-      <li><a href="https://www.kcl.ac.uk/research/funding-opportunities/doctoral-research-opportunities/current-phd-opportunities/astar-phd-studentships">King's A*STAR PhD Studentships</a></li>
-      <li><a href="https://www.kcl.ac.uk/study-legacy/funding/joint-phd-scholarship">Joint PhD Scholarships</a></li>
-      <li>Self-funding options available</li>
-    </ul>
-
-    <h2>Academic Visitors</h2>
-    <p>Researchers from universities, institutes, and industry are welcome to visit. Please email for details.</p>
-
-    <h2>Visiting Research Students</h2>
-    <p>Open to visiting research students from UK or international institutions. Please check <a href="https://www.kcl.ac.uk/study/postgraduate-research/visiting-research-students">College policy</a> and email for info.</p>
-
-</div>
-
-<hr>
-
-<div class="contact">
-	<p>
-		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
-	</p>
-</div>
 </body>
 </html>
