--- a/publications.html
+++ b/publications.html
@@ -1,34 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Publications - SUZUKI, Atsushi</title>
-<style type="text/css">
-<!--
-body { color: #202122; }
-a {text-decoration: none;}
-a:link { color: #0645ad; }
-a:visited { color: #0b0080; }
-a:hover { text-decoration: underline; }
-li {
-	margin: 6px 0;
-}
--->
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUZUKI, Atsushi - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body lang="en">
-<h1>Publications - SUZUKI, Atsushi</h1>
+<body>
 
-<div class="menu">
-	<p>
-		<a href="index.html"><strong>News & About me</strong></a> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <strong>Publications</strong> | <a href="talks.html"><strong>Talks & Teaching</strong></a>
-	</p>
-</div>
+<header>
+    <div class="logo">
+    	SUZUKI, Atsushi
+    </div>
+    <nav>
+        <a href="index.html">News & About me</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="opportunities.html">Research Opportunities</a>
+    </nav>
+</header>
 
-<hr>
-
-<div class="main">
+<main>
 
 <h2>Refereed Publications</h2>
 <p>See also <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>.</p>
@@ -76,15 +68,11 @@ li {
 		"Structure selection for convolutive non-negative matrix factorization using normalized maximum likelihood coding." <br>In <i>Proceedings of the 16th IEEE International Conference on Data Mining (<strong>ICDM</strong>)</i>, Barcelona, Dec. 2016.</li>
 </ul>
 
-</div>
+</main>
 
-<hr>
+<footer>
+    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+</footer>
 
-<div class="contact">
-	<p>
-		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
-	</p>
-</div>
 </body>
 </html>
