--- a/index.html
+++ b/index.html
@@ -1,57 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>SUZUKI, Atsushi</title>
-<style type="text/css">
-<!--
-body { color: #202122; }
-a:link { color: #0645ad; }
-a:visited { color: #0b0080; }
-a:hover { text-decoration: underline; }
-a {text-decoration: none;}
-li {
-	margin: 6px 0;
-}
--->
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUZUKI, Atsushi - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body lang="en">
+<body>
 
-<h1>SUZUKI, Atsushi</h1>
+<header>
+    <div class="logo">
+    	SUZUKI, Atsushi
+    </div>
+    <nav>
+        <a href="index.html">News & About me</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="opportunities.html">Research Opportunities</a>
+    </nav>
+</header>
 
-<div class="menu">
-	<p>
-		<strong>News & About me</strong> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <a href="publications.html"><strong>Publications</strong></a> | <a href="talks.html"><strong>Talks & Teaching</strong></a>
-	</p>
-</div>
+<main>
 
-<hr>
-
-<div class="main">
-
-<p>Welcome - ようこそ - 歓迎!</p> 
+<h1>Welcome - ようこそ - 歓迎!</h1> 
 <p>
-I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Assistant Professor (UK Lecturer) at <strong>King's College London</strong></a>, Visiting Researcher at <strong>the University of Tokyo</strong>.</p>
+I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Assistant Professor (UK Lecturer) at King's College London</a>. I will move to <strong>the University of Hong Kong</strong> in January, 2025.</p> 
 
 <p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>differential-geometric machine learning</strong> and <strong>learning theory</strong>.</p>
-<p>	Email: atsushi.suzuki.rd AT gmail.com </p>
+<p>	Email: atsushi.suzuki.rd [at] outlook.com </p>
 
-<hr>
-
-<h2>News:</h2>
+<h2>News</h2>
 <ul>
-	<li>Received complimentary registration to <strong>NeurIPS 2023</strong> (awarded for top 8% reviewers) (2023.11.20).</li>
-	<li><a href="publications.html">Our paper has been accepted to <strong>ICDM 2023</strong></a> (2023.09.03).</li>
-	<li>Gave an invited talk in <a href="https://sites.google.com/view/kdh-2023/program?authuser=0">KDH, <strong>IJCAI 2023</strong>, Macao</a> (2023.08.20).</li>
-	<li>Gave an invited talk at University of Science and Technology Beijing (<strong>USTB</strong>, 2023.07.26).</li>
-	<li>Gave an invited talk in <a href="http://symposium.dss.i.u-tokyo.ac.jp/#Speakers">the 2nd DSS (Data Science School) Symposium</a> at the University of Tokyo (<strong>UTokyo</strong>, 2023.07.07).</li>
-	<li>Working at the University of Tokyo as a Visiting Researcher (2023.05.01).
-	<li><a href="publications.html">Our paper has been accepted to <strong>ICML 2023</strong></a> (2023.04.25).</li>
+	<li>Will move to <strong>the University of Hong Kong</strong> as of 2025.01.01.</li>
+	<li>Served as Area Chair for <strong>NeurIPS 2024</strong>.</li>
 </ul>
-
-<hr>
 
 <h2>About me</h2>
 <h3>Research Interests: Applied Mathematics for Machine Learning</h3>
@@ -85,9 +67,10 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 </ul>
 <h3>Academic Services</h3>
 <ul>
+	<li>Area Chair: <strong>NeurIPS</strong> (2024)</li>
 	<li>Session Chair: <strong>IJCAI</strong> (2023)</li>
 	<li>Topic Editor: <strong>Frontiers in Big Data</strong></li>
-	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024), <strong>IPSJ-TOD</strong></li>
+	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024), etc.</li>
 </ul>
 <h3>Awards</h3>
 <ul>
@@ -100,15 +83,12 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 	<li>Others: Malay-Indonesian, Cantonese</li>
 	<li>Programming: C++11, Python 3, Ruby on Rails, Tensorflow 2, MATLAB, Perl</li>
 </ul>
-</div>
 
-<hr>
+</main>
 
-<div class="contact">
-	<p>
-		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
-	</p>
-</div>
+<footer>
+    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+</footer>
+
 </body>
 </html>
