--- a/talks.html
+++ b/talks.html
@@ -1,34 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Talks & Teaching - SUZUKI, Atsushi</title>
-<style type="text/css">
-<!--
-body { color: #202122; }
-a {text-decoration: none;}
-a:link { color: #0645ad; }
-a:visited { color: #0b0080; }
-a:hover { text-decoration: underline; }
-li {
-	margin: 6px 0;
-}
--->
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SUZUKI, Atsushi - Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body lang="en">
-<h1>Talks & Teaching - SUZUKI, Atsushi</h1>
+<body>
 
-<div class="menu">
-	<p>
-		<a href="index.html"><strong>News & About me</strong></a> | <a href="opportunities.html"><strong>PhD & Post-doc Opportunities</strong></a> | <a href="publications.html"><strong>Publications</strong></a> | <strong>Talks & Teaching</strong>
-	</p>
-</div>
+<header>
+    <div class="logo">
+    	SUZUKI, Atsushi
+    </div>
+    <nav>
+        <a href="index.html">News & About me</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="opportunities.html">Research Opportunities</a>
+    </nav>
+</header>
 
-<hr>
-
-<div class="main">
+<main>
 
 <h2>Talks</h2>
 <ul>
@@ -43,6 +35,7 @@ li {
 <h3>2023-24 (King's College London)</h3>
 <ul>
 	<li>Mathematics and statistics for artificial intelligence</li>
+	<li>Foundation of Computing 2</li>
 </ul>
 <h3>2021-22 (University of Greenwich)</h3>
 <ul>
@@ -76,16 +69,11 @@ li {
 <ul>
 	<li><a href="material/probability_lecture.pdf"> Probability Theory<a></li>
 </ul>
+</main>
 
-</div>
+<footer>
+    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+</footer>
 
-<hr>
-
-<div class="contact">
-	<p>
-		SUZUKI, Atsushi, Dr. (鈴木 惇)<br>
-		atsushi.suzuki.rd AT gmail.com | <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>
-	</p>
-</div>
 </body>
 </html>
