--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 </main>
 
 <footer>
-    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
 </footer>
 
 </body>
