--- a/opportunities.html
+++ b/opportunities.html
@@ -22,10 +22,10 @@
 
 <main>
 <h1>Research opportunities</h1>
-<p><strong>Notice:</strong> Professor SUZUKI will be moving to the University of Hong Kong (HKU) and has suspended all recruitments at King's College London. Information about research opportunities at HKU will be available soon.</p>
+<p><strong>Notice:</strong> Professor SUZUKI will move to <strong>the University of Hong Kong (HKU)</strong> and has suspended all recruitments at King's College London. Information about research opportunities at HKU will be available soon.</p>
 </main>
 <footer>
-    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
 </footer>
 
 </body>
