--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 </main>
 
 <footer>
-    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
 </footer>
 
 </body>
