--- a/talks.html
+++ b/talks.html
@@ -72,7 +72,7 @@
 </main>
 
 <footer>
-    <p><strong>Contact: </strong>Professor SUZUKI, Atsushi: atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
 </footer>
 
 </body>
