--- a/talks.html
+++ b/talks.html
@@ -64,10 +64,10 @@
 
 <h2>Materials</h2>
 <ul>
-	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space<a></li>
+	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space</a></li>
 </ul>
 <ul>
-	<li><a href="material/probability_lecture.pdf"> Probability Theory<a></li>
+	<li><a href="material/probability_lecture.pdf"> Probability Theory</a></li>
 </ul>
 </main>
 
