--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
 
 <h1>Welcome - ようこそ - 歓迎!</h1> 
 <p>
-I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Assistant Professor (UK Lecturer) at King's College London</a>. I will move to <strong>the University of Hong Kong</strong> in January, 2025.</p> 
+I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.suzuki">Assistant Professor at the University of Hong Kong (HKU)</a>.</p> 
 
 <p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>differential-geometric machine learning</strong> and <strong>learning theory</strong>.</p>
 <p>	Email: atsushi.suzuki.rd [at] outlook.com </p>
 
 <h2>News</h2>
 <ul>
-	<li>Will move to <strong>the University of Hong Kong</strong> as of 2025.01.01.</li>
-	<li>Served as Area Chair for <strong>NeurIPS 2024</strong>.</li>
+	<li>Will serve as Area Chair for <strong>NeurIPS 2025</strong>.</li>
+	<li>Our paper, <strong>"Hallucinations are inevitable but statistically negligible,"</strong> <a href="https://arxiv.org/abs/2502.12187">has been uploaded to arXiv.</a></li>
+	<li>Joined <strong>the University of Hong Kong</strong> as of 2025-01-01.</li>
+	<li>Our paper, <strong>"Foundation of Calculating Normalized Maximum Likelihood for Continuous Probability Models,"</strong> <a href="https://arxiv.org/abs/2409.08387">has been uploaded to arXiv.</a></li>
 </ul>
 
 <h2>About me</h2>
@@ -46,8 +48,9 @@ I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://www.kcl.ac.uk/people/atsushi-
 
 <h3>Career</h3>
 <ul>
-	<li><strong>2022.08-Present: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. <a href="https://www.kcl.ac.uk/people/atsushi-suzuki">Personal webpage at King's College London</a></li>
-	<li><strong>2023.05-present: Visiting Researcher</strong>, Department of Mathematical Informatics, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
+	<li><strong>2025.01-Present: Assistant Professor</strong>, Department of Mathematics, Faculty of Sciences, <br><strong>The University of Hong Kong</strong>, Hong Kong SAR. <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.suzuki">Personal webpage at the University of Hong Kong</a></li>
+	<li><strong>2022.08-2024.12: Assistant Professor (UK Lecturer)</strong>, Department of Informatics, Faculty of Natural, Mathematics & Engineering Sciences, <br><strong>King's College London</strong>, United Kingdom. </li>
+	<li><strong>2023.05-2024.03: Visiting Researcher</strong>, Department of Mathematical Informatics, Graduate School of Information Science and Technology, <br><strong>The University of Tokyo</strong>, Japan.</li>
 	<li>2020.04-2022.08: <strong>Assistant Professor (UK Lecturer)</strong>, School of Computing and Mathematical Sciences, <br><strong>University of Greenwich</strong>, United Kingdom.</li>
 </ul>
 <h3>Education</h3>
@@ -70,7 +73,7 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 	<li>Area Chair: <strong>NeurIPS</strong> (2024)</li>
 	<li>Session Chair: <strong>IJCAI</strong> (2023)</li>
 	<li>Topic Editor: <strong>Frontiers in Big Data</strong></li>
-	<li>Reviewer: <strong>JMLR</strong>, <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024), etc.</li>
+	<li>Reviewer: <strong>JMLR</strong>, <strong>ICML</strong> (2024-), <strong>NeurIPS</strong> (2023), <strong>ICLR</strong> (2024-), etc.</li>
 </ul>
 <h3>Awards</h3>
 <ul>
