--- a/publications.html
+++ b/publications.html
@@ -22,6 +22,17 @@
 
 <main>
 
+<h2>Preprints</h2>
+<p>See also <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>.</p>
+<ul>
+	<li><strong>Atsushi Suzuki</strong>, Yulan He, Feng Tian, and Zhongyuan Wang. <br>
+		"Hallucinations are inevitable but statistically negligible." <br> 
+		<a href="https://arxiv.org/abs/2502.12187"><i>	arXiv:2502.12187</i>, 2025.</a></li>
+	<li><strong>Atsushi Suzuki</strong>, Kota Fukuzawa, and Kenji Yamanishi. <br>
+		"Foundation of Calculating Normalized Maximum Likelihood for Continuous Probability Models." <br> 
+		<a href="https://arxiv.org/abs/2409.08387"><i>	arXiv:2409.08387</i>, 2024.</a></li>
+</ul>
+
 <h2>Refereed Publications</h2>
 <p>See also <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>.</p>
 <ul>
